@@ -25,7 +25,7 @@ import java.util.function.Consumer;
 import retrofit2.Call;
 import retrofit2.Callback;
 import retrofit2.Response;
-
+import java.util.stream.Collectors;
 public class LessonRepository {
 
     private ApiService api;
@@ -46,18 +46,18 @@ public class LessonRepository {
 
         // 1️⃣ Lấy offline trước
         new Thread(() -> {
-//            List<WordEntity> cached = wordDao.getWordsByLesson(lessonId);
-//
-//            if (!cached.isEmpty()) {
-//                // Có dữ liệu local → dùng luôn
-//                List<Word> list = new ArrayList<>();
-//                for (WordEntity wordEntity:cached) {
-//                   list.add(WordMapper.toDomain(wordEntity));
-//                }
-//                wordsLiveData.postValue(list);
-//                loadingLiveData.postValue(false);
-//                return;
-//            }
+            List<WordEntity> cached = wordDao.getWordsByLesson(lessonId);
+
+            if (!cached.isEmpty()) {
+                // Có dữ liệu local → dùng luôn
+                List<Word> list = new ArrayList<>();
+                for (WordEntity wordEntity:cached) {
+                   list.add(WordMapper.toDomain(wordEntity));
+                }
+                wordsLiveData.postValue(list);
+                loadingLiveData.postValue(false);
+                return;
+            }
 
             // 2️⃣ Không có → gọi API
             api.getWordsByLessonOfUser(lessonId)
@@ -80,7 +80,7 @@ public class LessonRepository {
                                     wordDao.insertWords(
                                             list.stream()
                                                     .map(WordMapper::toEntity)
-                                                    .toList()
+                                                    .collect(Collectors.toList()) // <--- SỬA DÒNG NÀY (Thay .toList() bằng .collect(...))
                                     );
 
                                 }).start();
